--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.4",
-        "vue": "^3.4.0"
+        "vue": "^3.5.18"
+    },
+    "dependencies": {
+        "vue-router": "^4.5.1"
     }
 }
